--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body class="exe-web-site exe-search-bar" id="exe-node-0" background="https://raw.githubusercontent.com/joselmiquilena/present/main/_intef_header.png"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site exe-search-bar" id="exe-node-0" background="_intef_header.png"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <div id="header" ><div id="headerContent">Presentación en línea</div></div>
